fixed add button z-index

--- a/recipe-box/style/main.scss
+++ b/recipe-box/style/main.scss
@@ -26,6 +26,7 @@ h1 {
   border: none;
   border-radius: 3px;
   position: relative;
+  z-index: -1;
 }
 
 .container {
@@ -67,7 +68,7 @@ h1 {
   @include box-shadow();
   padding: 5px;
   padding-right: 20px;
-  
+
   h2 {
     margin: 5px 15px;
     font-size: 30px;
@@ -95,7 +96,7 @@ h1 {
 }
 
 .popup {
-  z-index: 10;
+  z-index: 100;
   position: absolute;
   left: 0;
   right: 0;
